--- a/SQIT3073_GA1_A231.md
+++ b/SQIT3073_GA1_A231.md
@@ -35,7 +35,7 @@ plt.show()
 df1 = pd.DataFrame(pd.read_excel("358_Consumer_Price_Index.xlsx", sheet_name=1))
 print(df1)
 
-groups = ["Alcoholic beverages and tobacco", "Clothing and footwear", "Housing, water, electricity, gas and other fuels",
+groups = ["Food and non-alcoholic beverages", "Alcoholic beverages and tobacco", "Clothing and footwear", "Housing, water, electricity, gas and other fuels",
           "Furnishings, household equipment and routine", "Health", "Transport", "Communication", "Recreation services and culture", 
           "Education", "Restaurant and hotels", "Miscellaneous goods and services"]
 
